# moco_ros

./: .gitignore  README.md  readme.md
moco_control/: CMakeLists.txt  package.xml
moco_control/config/: moco_controllers.yaml
moco_control/include/moco_control/: moco_hw_control_loop.h  moco_hw_interface.h
moco_control/launch/: moco_arm.launch  moco_hardware.launch  moco_visualize.launch
moco_control/msg/: moco_actuator_state.msg  moco_actuator_system.msg  motive_robot_state.msg  motive_robot_system.msg
moco_control/src/: moco_hw_control_loop.cpp  moco_hw_interface.cpp  moco_hw_main.cpp
moco_jog/: CMakeLists.txt  package.xml
moco_jog/config/: jog_arm.yaml
moco_jog/launch/: jog_example.launch
moco_ros/: CMakeLists.txt  package.xml
motive_description/: CMakeLists.txt  package.xml
motive_description/meshes/msa6/: link_L0.stl  link_L1.STL  link_L1.stl  link_L2.STL  link_L2.stl  link_L3.STL  link_L3.stl  link_L4.STL  link_L4.stl  link_L5.STL  link_L5.stl  link_L6.stl
motive_description/urdf/: msa6_v03.gazebo  msa6_v03.urdf  msa6_v03.urdf.xacro  msa6_v03_on_stand.urdf.xacro  msa6_v03_on_table.urdf.xacro
motive_gazebo/: CMakeLists.txt  package.xml
motive_gazebo/config/: gazebo_pid_gains.yaml  msa6_control.yaml
motive_gazebo/launch/: msa6_control.launch
msa6_controllers/: CMakeLists.txt  LICENSE  package.xml
msa6_controllers/config/: msa6_controllers.yaml
msa6_controllers/include/msa6_controllers/: msa6_hw_control_loop.h  msa6_hw_interface.h
msa6_controllers/src/: msa6_hw_control_loop.cpp  msa6_hw_interface.cpp  msa6_hw_main.cpp
msa6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
msa6_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  msa6_v03.srdf  ompl_planning.yaml  ros_controllers.yaml
msa6_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  msa6_on_stand_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/moco_control/: CMakeLists.txt  LICENSE  package.xml
src/moco_control/config/: moco_controllers.yaml
src/moco_control/include/moco_control/: moco_hw_interface.h
src/moco_control/src/: .moco_hw_interface.cpp.swp  moco_hw_control_loop.cpp  moco_hw_interface.cpp  moco_hw_main.cpp
