<?xml version="1.0"?>
<package>
  <name>moco_control</name>
  <version>0.0.1</version>
  <description>Hardware interface for the Motive Controller</description>
  <author email="doug@motive.ai">Doug Johnston</author>
  <maintainer email="doug@motive.ai">Doug Johnston</maintainer>
  <license>BSD</license>
  <url type="website">https://motive.ai</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>urdf</run_depend>
  <export>
  </export>
</package>
