<?xml version="1.0"?>
<package format="2">
  <name>motive_description</name>
  <version>0.0.0</version>
  <description>The motive_description package</description>

  <maintainer email="doug@motive.ai">andyz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
