<?xml version="1.0"?>
<package format="2">
  <name>msa6_controllers</name>
  <version>0.0.0</version>
  <description>Hardware interface for the Motive Controller</description>
  <author email="doug@motive.ai">Doug Johnston</author>
  <maintainer email="doug@motive.ai">Doug Johnston</maintainer>
  <license>Proprietary</license>
  <url type="website">https://motive.ai</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <depend>controller_manager</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>urdf</depend>

</package>
